--- a/layouts/shortcodes/big_numbers.html
+++ b/layouts/shortcodes/big_numbers.html
@@ -1,4 +1,4 @@
-<div id="dm-kpi-pane" class="relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] w-screen -mt-20">
+<div id="dm-kpi-pane" class="relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] w-screen mt-0 md:-mt-20">
 
   <style>
     /* Light (default) */
